# Projektowanie-Efektywnych-Algorytm-w---projekt-1

./: BnB.cpp  BnB.h  Brute_force.cpp  Brute_force.h  CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  Data_parser.cpp  Data_parser.h  Dynamic_programming.cpp  Dynamic_programming.h  FileReader.cpp  FileReader.h  Graph.cpp  Graph.h  Menu.cpp  Menu.h  OptionMenu.cpp  OptionMenu.h  Time_measure.cpp  Time_measure.h  Write_to_csv.cpp  Write_to_csv.h  data.txt  main.cpp
